src/kubernetes/events-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-service
  namespace: cinemaabyss
  labels: { app: events-service }
spec:
  replicas: 1
  selector: { matchLabels: { app: events-service } }
  strategy:
    type: RollingUpdate
    rollingUpdate: { maxSurge: 1, maxUnavailable: 0 }
  template:
    metadata: { labels: { app: events-service } }
    spec:
      containers:
        - name: events-service
          image: ghcr.io/uncle-alfer/software-architect-course-2/events-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
          resources:
            limits: { cpu: "300m", memory: "256Mi" }
            requests: { cpu: "100m", memory: "128Mi" }
          readinessProbe:
            httpGet: { path: /api/events/health, port: 8082 }
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /api/events/health, port: 8082 }
            initialDelaySeconds: 15
            periodSeconds: 20
      restartPolicy: Always
      imagePullSecrets:
        - name: dockerconfigjson
---
apiVersion: v1
kind: Service
metadata:
  name: events-service
  namespace: cinemaabyss
spec:
  selector: { app: events-service }
  ports:
    - port: 8082
      targetPort: 8082
  type: ClusterIP
