src/kubernetes/proxy-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-service
  namespace: cinemaabyss
  labels: { app: proxy-service }
spec:
  replicas: 1
  selector: { matchLabels: { app: proxy-service } }
  template:
    metadata: { labels: { app: proxy-service } }
    spec:
      containers:
        - name: proxy-service
          image: ghcr.io/uncle-alfer/software-architect-course-2/proxy-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            limits: { cpu: "300m", memory: "256Mi" }
            requests: { cpu: "100m", memory: "128Mi" }
          readinessProbe:
            httpGet: { path: /health, port: 8000 }
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /health, port: 8000 }
            initialDelaySeconds: 15
            periodSeconds: 20
      imagePullSecrets:
        - name: dockerconfigjson
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-service
  namespace: cinemaabyss
spec:
  selector: { app: proxy-service }
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
